--- a/front/mobile/package.json
+++ b/front/mobile/package.json
@@ -16,12 +16,14 @@
     "expo-av": "~12.0.4",
     "expo-dev-client": "~1.3.1",
     "expo-status-bar": "~1.4.0",
+    "node-telegram-bot-api": "^0.59.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.18.2",
-    "react-native-svg": "12.3.0"
+    "react-native-svg": "12.3.0",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
